force-app/main/default/objects/Disponibilidad_Medica__c/Disponibilidad_Medica__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para registrar y gestionar los horarios y fechas específicas en las que un médico está disponible en un centro estético particular.</description>
    <label>Disponibilidad Médica</label>
    <nameField>
        <label>Fecha y Hora y Medico</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disponibilidades Médicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>