force-app/main/default/objects/Disponibilidad_Medica__c/fields/Centro_Estetico_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Centro_Estetico_Asociado__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Centro estético donde el médico está disponible</description>
    <label>Centro Estético Asociado</label>
    <referenceTo>Centro_Estetico__c</referenceTo>
    <relationshipLabel>Disponibilidades Médicas</relationshipLabel>
    <relationshipName>Disponibilidades_Medicas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>