force-app/main/default/objects/Disponibilidad_Medica__c/fields/Fecha_hora_de_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_de_Fin__c</fullName>
    <label>Fecha/hora de Fin</label>
    <type>DateTime</type>
</CustomField>