force-app/main/default/objects/Disponibilidad_Medica__c/fields/Fecha_hora_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_de_Inicio__c</fullName>
    <description>Hora de inicio de la disponibilidad del médico</description>
    <label>Fecha/hora de Inicio</label>
    <type>DateTime</type>
</CustomField>