force-app/main/default/objects/Disponibilidad_Medica__c/fields/Medico_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Medico_Asociado__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Médico al cual pertenece esta disponibilidad.</description>
    <label>Médico Asociado</label>
    <referenceTo>Medico__c</referenceTo>
    <relationshipLabel>Disponibilidades Médicas</relationshipLabel>
    <relationshipName>Disponibilidades_Medicas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>